force-app/main/default/objects/smagicinteract__SMS_Batch_Execution_Tracker__c/smagicinteract__SMS_Batch_Execution_Tracker__c.object-meta.xml
<CustomObject>
    <label>SMS Batch Execution Tracker</label>
    <nameField>
        <displayFormat>SM-{000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SMS Batch Execution Tracker</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>