force-app/main/default/objects/smagicinteract__SMS_Batch_Execution_Tracker__c/fields/smagicinteract__Execution_Status__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Execution_Status__c</fullName>
    <description>This field contains the execution status. The status can be: Queued, Processing, etc.</description>
    <label>Execution Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Queued</fullName>
                <default>true</default>
                <label>Queued</label>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Aborted</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Preparing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>