force-app/main/default/objects/smagicinteract__SMS_Batch_Execution_Tracker__c/fields/smagicinteract__Job_Id__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Job_Id__c</fullName>
    <description>This field contains the job ID of the batch executed for sending SMS.</description>
    <label>Job Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>